# yaak

./: .gitignore  package-lock.json  package.json
.claude/commands/release/: generate-release-notes.md
.github/workflows/: flathub.yml  sync-upstream-release.yml
crates-tauri/yaak-app/: tauri.release.conf.json
crates-tauri/yaak-app/src/: http_request.rs  lib.rs
crates/yaak-git/: index.ts
crates/yaak-http/: Cargo.toml
crates/yaak-http/src/: sender.rs  types.rs
crates/yaak-templates/: build-wasm.cjs  package.json
crates/yaak-templates/src/: renderer.rs
flatpak/: app.yaak.Yaak.metainfo.xml  app.yaak.Yaak.yml  fix-lockfile.mjs  generate-sources.sh  update-manifest.sh  yaak.desktop
plugins-external/faker/: README.md  package.json
plugins-external/faker/src/: index.ts
plugins-external/faker/tests/: init.test.ts
plugins-external/faker/tests/__snapshots__/: init.test.ts.snap
scripts/: vendor-node.cjs  vendor-protoc.cjs
src-web/components/git/: GitDropdown.tsx
